
[TestBracketGroup_Snapshot_Resolving - 1]
├── ⠋ since   latest release …looking up tag
└── · until   HEAD

---

[TestBracketGroup_Snapshot_Resolved - 1]
├── ✔ since   latest release → v0.14.0  a3b4c5d  Jan 15 2026
└── ✔ until   HEAD → v0.18.0  f1e2d3c  May 4 2026

---

[TestTreeGroup_Snapshot_Resolving - 1]
Evidence
├── · commits         waiting
├── ⠋ issues          page 2 — 73 received
└── ⠋ pull requests   page 4 — 164 received

---

[TestTreeGroup_Snapshot_Resolved - 1]
Evidence
├── ✔ commits         47   (15 dropped)
├── ✔ issues          73   (31 dropped)
└── ✔ pull requests   164   (77 dropped)

---

[TestTreeGroup_Snapshot_Skipped - 1]
Evidence
├── ✔ commits         0
├── ⊘ issues          skipped
└── ⊘ pull requests   skipped

---

[TestTreeGroup_Snapshot_NestedSBOM_Scanning - 1]
Evidence
├── ✔ commits         47   (15 dropped)
├── ✔ issues          73
├── ✔ pull requests   164
└── ⠋ source sbom     cataloging…
    ├── ⠋ since   142 packages
    └── ⠋ until   156 packages

---

[TestTreeGroup_Snapshot_NestedSBOM_Resolved - 1]
Evidence
├── ✔ commits         47   (15 dropped)
├── ✔ issues          73
├── ✔ pull requests   164
└── ✔ source sbom     added=10 removed=12 updated=2 downgraded=3
    ├── ✔ since   142 packages
    └── ✔ until   156 packages

---

[TestTreeGroup_Snapshot_SBOMAndVulnerabilities - 1]
Evidence
├── ✔ commits           47   (15 dropped)
├── ✔ issues            73
├── ✔ pull requests     164
├── ✔ source sbom       added=10 removed=12 updated=2 downgraded=3
│   ├── ✔ since   142 packages
│   └── ✔ until   156 packages
└── ⠋ vulnerabilities   matching…
    ├── ⠋ since   matching…
    └── ✔ until   7 vulnerabilities

---
